@startuml

class Route {
    --
    match:Object
}

class TablePage {
    sprayingId:number
    --
    spraying:Spraying
    isSprayingLoading:bool
    areWeedSectorsVisible:bool
    chemicalSectorsVisibility:Array
}

class Control {
    areWeedSectorsVisible:bool
    chemicalSectorsVisibility:Array
    setWeedSectorsVisibility(areWeedSectorsVisible:bool)
    setChemicalSectorsVisibility(chemicalSectorsVisibility:Array)
    --
}

class Info {
    description:SprayingDescription
}

class SprayingTable {
    spraying:Spraying
    areWeedSectorsVisible:bool
    chemicalSectorsVisibility:Array
}

Route -- TablePage
TablePage -- Info
TablePage -- Control
TablePage -- SprayingTable

@enduml
